blue-green/templates/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen
  # ingressClassName: k8s.io/ingress-nginx
  annotations:
    # kubernetes.io/ingress.class: nginx-internal
spec:
  rules:
  - host: bluegreen.local.com
    http:
      paths:
      - backend:
          service:
            name: bluegreen-helm-guestbook
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: bluegreen-preview.local.com
    http:
      paths:
      - backend:
          service:
            name: bluegreen-helm-guestbook-preview
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  # tls:
  # - hosts:
  #   - infra-zabbix.apps.kpc-dev.com
  #   secretName: wildcard-apps-kpcdev-com-tls
